# ai-server

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile.agent  GETSTARTED.md  MISSION.md  Pipfile  README.md  SERVER.md  TEARDOWN.md  pyproject.toml
.claude/: settings.json  settings.local.json
.context/: INDEX.md  PROJECTS_REGISTRY.md  PROJECT_PROTOCOL.md  PROTOCOL.md  SKILLS_REGISTRY.md  SYSTEM.md
.handoff/: CONTEXT.md  README.md  REC-10-FINISH.md  REC-2-SPEC.md  REC-REMAINING-SPECS.md  rec-10-current-diff.patch
Caddyfile.d/: atlas.conf  baseball-bingo.conf  health.conf  market-tracker.conf
alembic/: env.py
docs/: AUDIT_2026-07-12.md  CONTAINERS.md  EVALUATION_2026-04-18.md  EVALUATION_2026-07-10-atlas.md  EVALUATION_2026-07-10.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  README.md  TROUBLESHOOTING.md  assistant-system-design.md
evals/: README.md  __init__.py  harness.py  run.py
projects/: README.md  _ports.yml
scripts/: backup.sh  bootstrap.sh  healthcheck-all.sh  install-launchd.sh  install-prod-hooks.sh  lint_docs.py  register-project.sh  run.sh  seed-module-skills.sh  seed-schedules.sh  setup-caddy.sh  setup-tunnel.sh  sync-learnings.sh
skills/: README.md  TEMPLATE.md
src/: audit_log.py  config.py  db.py  models.py
static/: index.html
tests/: test_audit_index.py  test_context_budget.py  test_doc_lint.py  test_evals.py  test_events.py  test_executors.py  test_health.py  test_learning.py  test_mcp_tools.py  test_module_graph.py  test_module_knowledge.py  test_orphaned_jobs.py  test_plans.py  test_proposals.py  (+8 more)
(+120 files in other folders)
